whisply-rs/tui/src/bottom_pane/snapshots/whisply_tui__bottom_pane__chat_composer__tests__skill_popup_closes_after_trailing_space.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› $figma                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
